# nfc-mosquittino

./: .gitignore  justfile
arduino/: Secrets.h  justfile  mqtt_rx.ino  nfc_tx.ino
event_manager/: CMakeLists.txt  justfile
event_manager/app/: EventManager.h  EventsManager.h  ForConfiguringPort.h  MockNotifier.h
event_manager/outbound_adapters/: ArduinoUnoR4WifiController.cpp  ArduinoUnoR4WifiController.h
event_manager/tests/: EventsManagerTests.cpp  foo_test.cpp
events_manager/: CMakeLists.txt  justfile
events_manager/app/: EventsManager.cpp  EventsManager.h  ForConfiguringPort.h  ForControllingPort.h  ForNotifyingPort.h  ForSendingEventsPort.h  MockController.h  MockNotifier.h  StaticContainer.h
events_manager/inbound_adapters/: ArduinoUnoR4WifiMQTTSubscriber.cpp  ArduinoUnoR4WifiMQTTSubscriber.h  ArduinoUnoR4WifiNFCReader.cpp  ArduinoUnoR4WifiNFCReader.h
events_manager/outbound_adapters/: ArduinoUnoR4WifiController.cpp  ArduinoUnoR4WifiController.h  ArduinoUnoR4WifiLedMatrix.cpp  ArduinoUnoR4WifiLedMatrix.h  ArduinoUnoR4WifiMQTTNotifier.cpp  ArduinoUnoR4WifiMQTTNotifier.h  ArduinoUnoR4WifiSerialNotifier.cpp  ArduinoUnoR4WifiSerialNotifier.h
events_manager/tests/: EventsManagerTests.cpp  StaticContainerTests.cpp
mqtt_broker/: broker.yml
mqtt_broker/config/: mosquitto.conf
